feat: improve web ui, implement default mode
